# ytq

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
src/: commands.rs  main.rs  models.rs  paths.rs  stats.rs  store.rs  youtube.rs  youtube_api.rs
